src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Inst_Group__c</fullName>
        <displayFormat>Org-{00000}</displayFormat>
        <label>Inst Group</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Is_Test_Institute__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Test Institute</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pg_Institution_Id__c</fullName>
        <label>Pg_Institution_Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Short_Name__c</fullName>
        <label>Short Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trial_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Trial Id</label>
        <referenceTo>Trial__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Organizations</label>
    </listViews>
    <listViews>
        <fullName>Migrated</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>Pg_Institution_Id__c</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Pg_Institution_Id__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Migrated</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Produn</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>Pg_Institution_Id__c</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER.ALIAS</field>
            <operation>equals</operation>
            <value>Bakul</value>
        </filters>
        <label>Produn</label>
    </listViews>
    <namedFilters>
        <fullName>nf_01Ic00000000EB5EAM_00Nc0000000GmqIEAS</fullName>
        <active>true</active>
        <field>InstitutionDcc__c.DCC_Id__c</field>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>DCC, DCC Safety Group</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>InstitutionDcc_DCC Id</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01Ic00000000EB5EAM_00Nc0000000GnnyEAC</fullName>
        <active>true</active>
        <field>InstitutionDcc__c.Institution_Id__c</field>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Institution</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>InstitutionDcc_Institution Id</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01Ic00000000EHmEAM_00Nc0000000Gnq4EAC</fullName>
        <active>true</active>
        <field>InstitutionTrial__c.Institution_Id__c</field>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Institution</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>InstitutionTrial_Institution Id</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01Ic00000000EQFEA2_00Nc0000000GougEAC</fullName>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <field>DCC_User__c.DCC__c</field>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>DCC</value>
        </filterItems>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>DCC Safety Group</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>DCC User_DCC</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01Ic00000000pSwEAI_00Nc0000000ngMMEAY</fullName>
        <active>true</active>
        <field>DCC_Form__c.Account__c</field>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>DCC, DCC Safety Group</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>DCC Form_Account</name>
    </namedFilters>
    <recordTypes>
        <fullName>DCC</fullName>
        <active>true</active>
        <label>DCC</label>
    </recordTypes>
    <recordTypes>
        <fullName>DCC_Safety_Group</fullName>
        <active>true</active>
        <label>DCC Safety Group</label>
    </recordTypes>
    <recordTypes>
        <fullName>Institution</fullName>
        <active>true</active>
        <label>Institution</label>
    </recordTypes>
</CustomObject>